--- a/app/views/agile-working/agile-governance.html
+++ b/app/views/agile-working/agile-governance.html
@@ -16,88 +16,144 @@
 
 <main id="content" role="main">
 
-  <h1 class="heading-xlarge">Agile working</h1>
-   <nav class="page-navigation">
-    <ol>
-      <li class="active">
-          <span class="part-number">1.</span>
-          <a href="/agile-working/what-is-agile">What is agile working?</a>
-        </li>
-        <li>
-          <span class="part-number">2.</span>
-          <a href="/agile-working/why-agile-works">Why agile works</a>
-        </li>
-        <li>
-          <span class="part-number">3.</span>
-          <a href="/agile-working/moving-to-agile">Moving to agile</a>
-        </li>
-    </ol>
-    <ol start="4">
-      <li>
-          <span class="part-number">4.</span>
-          <a href="/agile-working/working-agile-team">Working in agile teams</a>
-      </li>
-      <li>
-        <span class="part-number">5.</span>
-        <span>Agile governance</span>
-      </li>
-    </ol>
-  </nav>
-
   <div class="grid-row">
-    <div class="column-two-thirds">
+  <div class="column-two-thirds">
 
-      <h2 class="heading-large" id="about-the-a-to-z">5. Agile governance</h2>
+  <h1 class="heading-xlarge">Agile governance</h1>
+      <p class="lede">
+        Governance enables service delivery by creating the correct conditions for delivery teams to do the right things for users, in the right way and at the right time.
+      </p>
+  </div>
+
+
+    
+  <div class="column-two-thirds">    
+
+
+
+
+ <!--      <h2 class="heading-large" id="about-the-a-to-z">1. What is agile working?</h2>
       <p>
         Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-      </p>
-      <h3 class="heading-small">Subtitle in here</h3>
+      </p> -->
+
+
+      <h3 class="heading-small" id="how-governance-works">How governance works</h3>
       <p>
-        Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
+        Governance should be done in line with the government’s 6 governance principles for digital services:
+      </p>
+      <ol class="list-bullet">
+        <li>don’t slow down delivery — assurers need to work at the same pace as delivery teams, using the data teams are already producing to manage delivery</li>
+        <li>decisions when they’re needed, at the right level — assurers should have the authority to make decisions and provide recommendations to solve problems before they affect delivery</li>
+        <li>do it with the right people — assurers need recognised skills and experience in what they’re assuring so they can be effective and credible</li>
+        <li>go see for yourself — face-to-face communication with delivery teams and people who govern is the most effective way of assuring</li>
+        <li>only do it if it adds value — assurance should be focused where it can add the most value and this will be different for each service</li>
+        <li>trust and verify — mutual trust between assurers and those they assure is vital</li>
+      </ol>
+      <h3 class="heading-small" id="business-case-funding">Business case and funding</h3>
+       <p>
+        There are 5 phases of service delivery — discovery, alpha, beta, live and retirement. You’ll need to get approval at different phases when you build your service.
+      </p>
+      <h3 class="heading-small" id="discovery-and-alpha">Discovery and alpha</h3>
+      <p>
+        Discovery is right at the start of your project — where you research user needs, find out about any policy or technological constraints and get a picture of what your first prototypes will explore.
+      </p>
+      <p>
+        During the alpha phase, you start building and testing those prototypes.
+      </p>
+      <p>
+        To start discovery, you need approval for discovery and alpha. This means:
+      </p>
+      <ol class="list-bullet">
+        <li>investment approval from your department</li>
+        <li>Cabinet Office spend control approval to spend on external resources, eg on suppliers</li>
+      </ol>
+      <p>
+        You don’t normally need a detailed business case for discovery and alpha because they inform the development of the bigger investment case for beta and live.
+      </p>
+      <p>
+        As a guide, discovery and alpha together shouldn’t cost over £750,000. If you plan to go above this, you should question whether you’ve sized the discovery and alpha correctly — if you do exceed this figure you’ll need a detailed business case.
+      </p>
+      <h3 class="heading-small" id="beta-and-live">Beta and live</h3>
+      <p>
+        The beta phase is where you build a fully working prototype that you’ll test in public. The live phase is when your public beta has been tested and is ready to release.
+      </p>
+      <p>
+        To go to beta you’ll need approval for beta and live. This means:
+      </p>
+      <ol class="list-bullet">
+        <li>investment approval from your department</li>
+        <li>Cabinet Office spend control approval to spend on external resources, eg on suppliers</li>
+        <li>any other approvals specific to your service eg headcount or salary/grade changes</li>
+      </ol>
+      <p>
+        You need to submit a business case to HM Treasury (HM Treasury published guidance) if any of following apply:
+      </p>
+      <ol class="list-bullet">
+        <li>your anticipated total spend on the entire programme (including non-digital aspects) is higher than your organisation’s delegated authority as set by HM Treasury</li>
+        <li>your digital spend is above £10 million</li>
+      </ol>
+      <p>
+        If you need to approach HM Treasury and your digital spend is below £10 million, just include it concisely within your programme business case rather than writing a separate business case for it
       </p>
 
-      <div class="js-collapsible-collection subsection-collection" data-collapse-depth="1">
-        <div class="collapsible-subsections">
-          <div class="govspeak">
+      <p>
+        HM Treasury has introduced the ‘programme business case’, where detail can be added by phase. This is because agile delivery:
+      </p>
+      <ol class="list-bullet">
+        <li>typically enables smaller, more frequent funding approvals</li>
+        <li>may form part of a larger programme of transformational change</li>
+      </ol>
+      <p>
+        The programme business case can be used for projects or programmes that have agile delivery elements. It replaces the traditional approval process (strategic outline case followed by outline business case and full business case).
+      </p>
+      <p>
+        However, these still apply for large investment decisions involving lengthy public sector OJEU (Official Journal of the European Union) procurement processes.
+      </p>
+      <p>
+        There’s more information about this in the HM Treasury clarification on business cases for agile.
+      </p>
+      <h3 class="heading-small" id="project-assurance">Project assurance</h3>
+      <p>
+        Assurance is a range of activities and processes put in place to make sure services meet user needs and organisational goals. It’s important because it helps successful delivery of services by improving people’s understanding of progress, helping them make informed decisions about the work being done.
+      </p>
+      <p>
+        Assurance is an ongoing process that helps maintain quality through the life of a service.
+      </p>
+      <h3 class="heading-small" id="whos-involved-assurance">Who’s involved in assurance</h3>
+      <p>
+        Everyone working on a service has responsibility for assurance. It’s built in to Agile ways of working with regular checkpoints and opportunities for feedback that help keep governance and delivery work on track. This self assurance gives teams the opportunity to:
+      </p>
+      <ol class="list-bullet">
+        <li>review each others’ work</li>
+        <li>challenge and refine ways of working through transparent communications</li>
+        <li>reflect on how the service could be improved in the light of feedback</li>
+      </ol>
+      <p>
+        This way of working helps assure the quality of the services being delivered and provides reassurance to those responsible for governance, helping to build trust.
+      </p>
+      <h3 class="heading-small" id="independent-assurance">Independent assurance</h3>
+      <p>
+        Sometimes people not directly involved in day to day delivery of a service can spot things that people in the team are less likely to see because they’re too close to the work. This type of external assurance can:
+      </p>
+      <ol class="list-bullet">
+        <li>provide extra confidence to the delivery team and people who govern that they have a clear understanding of progress</li>
+        <li>identify improvements that could increase the chances of successful delivery</li>
+        <li>look at delivery activity across multiple teams, including governance, and assess how effective it is</li>
+      </ol>
+      <p>
+        Assurance should be:
+      </p>
+      <ol class="list-bullet">
+        <li>proportionate to the service phase and scale</li>
+        <li>aligned to the governance principles for digital services</li>
+        <li>based on mutual trust between the team and those involved in the assurance activities</li>
+        <li>open and transparent, with any observations or recommendations available to everyone</li>
+      </ol>
+      <p>
+        Assurers should actively seek feedback on their approach and adapt in response to that feedback.
+      </p>
 
-            <h2 class="heading-medium">Title of sub section 1</h2>
-             <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-
-            <h2 class="heading-medium">Title of sub section 2</h2>
-             <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-
-            <h2 class="heading-medium">Title of sub section 3</h2>
-             <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-
-            <h2 class="heading-medium">Title of sub section 4</h2>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-
-          </div>
-
-        </div>
-      </div>
-
-    </div>
   </div>
 
 </main>
