--- a/app/views/agile-working/agile-working.html
+++ b/app/views/agile-working/agile-working.html
@@ -1,7 +1,7 @@
 {{<layout}}
 
 {{$pageTitle}}
-  GOV.UK Service Manual: Agile working : Working in agile teams
+  GOV.UK Service Manual: Agile working 
 {{/pageTitle}}
 
 {{$content}}
@@ -17,12 +17,11 @@
 <main id="content" role="main">
 
   <h1 class="heading-xlarge">Agile working</h1>
-   
 
   <div class="grid-row">
 
     <div class="column-two-thirds" style="margin-bottom:15px;">
-      <h2 class="heading-large" id="about-the-a-to-z">3. Moving to agile</h2>
+      <h2 class="heading-large" id="about-the-a-to-z">4. Working in agile teams</h2>
       <p class="lede">
         Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
       </p>
