--- a/app/views/agile-working/moving-to-agile.html
+++ b/app/views/agile-working/moving-to-agile.html
@@ -16,87 +16,256 @@
 
 <main id="content" role="main">
 
-  <h1 class="heading-xlarge">Agile working</h1>
+  <h1 class="heading-xlarge">Moving to agile</h1>
    <nav class="page-navigation">
     <ol>
       <li class="active">
           <span class="part-number">1.</span>
-          <a href="/agile-working/what-is-agile">What is agile working?</a>
+          <span>Agile training</span>
         </li>
         <li>
           <span class="part-number">2.</span>
-          <a href="/agile-working/why-agile-works">Why agile works</a>
+          <a href="/agile-coaching">Agile coaching</a>
         </li>
         <li>
           <span class="part-number">3.</span>
-          <span>Moving to agile</span>
+          <a href="/learn-from-other-people">Learn from other people</a>
         </li>
     </ol>
     <ol start="4">
       <li>
           <span class="part-number">4.</span>
-          <a href="/agile-working/working-agile-team">Working in agile teams</a>
+          <a href="/learn-by-doing">Learn by doing</a>
       </li>
       <li>
         <span class="part-number">5.</span>
-        <a href="/agile-working/agile-governance">Agile governance</a>
+        <a href="/find-support-and-share-ideas">Find support and share ideas</a>
       </li>
     </ol>
   </nav>
 
   <div class="grid-row">
+
+    <div class="column-two-thirds" style="margin-bottom:15px;">
+      <h2 class="heading-large" id="about-the-a-to-z">1. Beginners guide to getting started with agile</h2>
+      <p class="lede">
+        Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
+      </p>
+    </div>
+
+    <div class="column-third" style="clear:both;">
+      <p>Page contents:</p>
+        <ol class="list-contents">
+          <li><a href="#agile-training">Agile training</a></li>
+          <li><a href="#agile-coaching">Agile coaching</a></li>
+          <li><a href="#learn-from-other-people">Learn from other people</a></li>
+          <li><a href="#learn-by-doing">Learn by doing</a></li>
+          <li><a href="#find-support-and-share-ideas">Find support and share ideas</a></li>          
+          <li><a href="#stakeholder-engagement">Stakeholder engagement</a></li> 
+        </ol>
+    </div>
+
+
     <div class="column-two-thirds">
 
-      <h2 class="heading-large" id="about-the-a-to-z">3. Moving to agile</h2>
+<!--       <h2 class="heading-large" id="about-the-a-to-z">3. Moving to agile</h2>
       <p>
         Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
+      </p> -->
+
+
+      <h2 class="heading-medium" id="agile-training" style="margin-top:0px;">Agile training</h2>
+      <p>When taking part in any training course, it’s important to remember that there are many different approaches to applying agile delivery management. 
       </p>
-      <h3 class="heading-small">Subtitle in here</h3>
       <p>
-        Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
+        It’s worthwhile to learn a number of tools and techniques and strengthen your understanding with self-initiated learning and doing.
+      </p>
+      <h3 class="heading-small">Book an agile training course</h3>
+      <p>
+        If you are a civil servant find and book your course through <a href="https://civilservicelearning.civilservice.gov.uk/">Civil Service Learning</a>.
+      </p>
+      <h3 class="heading-small">Delivery managers and scrum master training</h3>
+      <p>
+        Some options to think about when training are:
+      </p>
+      <ol class="list-bullet">
+          <li>specific frameworks and methodologies: Start with lightweight frameworks and methodologies such as Scrum, Kanban and Extreme Programming (others are available)</li>
+          <li>more specific practices such as: agile user stories, agile estimating, agile planning, managing teams (more are available)</li>
+          <li>softer skills such as workshop facilitation, coaching, motivating teams</li>
+      </ol>
+      <h3 class="heading-small">Training for other team roles and stakeholders</h3>
+      <p>
+        If you need to find out more about agile and how it relates to your role, book a course that gives you an introduction and covers its benefits. Make sure that it’s a broad course that covers more than one methodology or framework.
       </p>
 
 
-      <div class="js-collapsible-collection subsection-collection" data-collapse-depth="1">
-        <div class="collapsible-subsections">
-          <div class="govspeak">
+      <h2 class="heading-medium" id="agile-coaching">Agile coaching</h2>
+      <p>
+        Part of a delivery manager or scrum master’s role is to be an agile coach; training the team, organisation and stakeholders in the benefits of agile working.
+      </p>
+      <h3 class="heading-small">Book agile coach training</h3>
+      <p>
+        If you are a civil servant find and book your course through <a href="https://civilservicelearning.civilservice.gov.uk/">Civil Service Learning</a>.
+      </p>
+      <h3 class="heading-small">Hiring an agile coach</h3>
+      <p>
+        Sometimes it can be helpful to bring in an agile coach, especially in an organisation new to agile to:
+      </p>
+      <ol class="list-bullet">
+        <li>train teams and organisations in agile working</li>
+        <li>help organisational change</li>
+        <li>help stakeholder engagement</li>
+      </ol>
 
-            <h2 class="heading-medium">Title of sub section 1</h2>
-             <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
 
-            <h2 class="heading-medium">Title of sub section 2</h2>
-             <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
+      <h2 class="heading-medium" id="learn-from-other-people">Learn from other people</h2>
+      <p>
+        You can learn a lot from seeing other people who are practicing agile techniques. Go and see how other people are doing agile within your organisation and across government.
+      </p>
+      <p>
+        Agile teams are open and transparent, so they should be happy to invite you into planning, review and retrospective sessions.\
+      </p>
+      <p>
+        There are communities of practice for all agile disciplines where you can find teams and people to help.  
+      </p>
+      <h3 class="heading-small">The service assessment and service standard point 2</h3>
+      <p>
+        To satisfy criteria 2 of the service standard you must be able to show how you are transferring knowledge from any external contractors into your organisation. To achieve this you can use:
+      </p>
+      <ol class="list-bullet">
+        <li>shadowing</li>
+        <li>pairing</li>
+        <li>mentoring</li>
+      </ol>
+      <p>
+        When you hire contractors and suppliers they need to be able to show:
+      </p>
+      <ol class="list-bullet">
+        <li>how they will share knowledge </li>
+        <li>provide coaching  </li>
+        <li>mentor civil servants </li>
+      <h3 class="heading-small">Shadowing</h3>
+      <p>
+        You should try to spend some time shadowing or working with delivery practitioners on problems to give you a better understanding of how they apply agile.
+      </p>
+      <p>
+        Try to invite external speakers in to share their own experiences with you and your department or team and take the chance to discuss your ideas with them.
+      </p>
+      <h3 class="heading-small">Pairing</h3>
+      <p>
+        Pairing comes from the term pair programming in Extreme programming, but is just as relevant all types of work and job role. During this practice two people will sit together to work on the same thing at the same time.
+      </p>
+      <p>
+        One of you is writing the code or doing the task, and the other is observing and giving input. The benefits of working in this way lead to better quality of code, better communication amongst the team and learning how something is built and why decisions were made. Pairing rapidly increases learning as an individual and as a team.
+      </p>
+      <h3 class="heading-small">Mentoring</h3>
+      <p>
+        This works by pairing a new or less experienced team member (mentee) with someone with more or different experience (mentor). 
+      </p>
+      <p>
+        There is an ongoing semi-formal relationship where the mentor:
+      </p>
+      <ol class="list-bullet">
+        <li>regularly meets with the mentee</li>
+        <li>is freely available for advice and coaching</li>
+        <li>allows the mentee to shadow and attend networking opportunities</li>
+      </ol>
 
-            <h2 class="heading-medium">Title of sub section 3</h2>
-             <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
 
-            <h2 class="heading-medium">Title of sub section 4</h2>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
+      <h2 class="heading-medium" id="learn-by-doing">Learn by doing</h2>
+      <p>
+        The best learning often comes from doing the thing. 
+      </p>
+      <p> 
+        The agile techniques in this manual can be applied to many types of projects. They are not restricted to software. This means that you can quickly start to learn as a team through running small projects.
+      </p>
+      <h3 class="heading-small">How to start out</h3>
+      <p>
+        Take a project that you’re working on and start to apply agile techniques to it, then improve on them as you go. 
+      </p>
+      <p>
+        You can learn a lot from being unsuccessful: the phrase ‘fail fast’ is often used in an agile context, but what you can benefit from is learning quickly.
+      </p>
 
-          </div>
 
-        </div>
-      </div>
+      <h2 class="heading-medium" id="find-support-and-share-ideas">Find support and share ideas</h2>
+      <p>
+        A fundamental principle of agile is finding things out for yourself and sharing knowledge. 
+      </p>
+      <p>
+        Part of this is by simply asking questions and visiting other teams. But you can also gain more knowledge through self-initiated learning by:
+      </p>
+      <ol class="list-bullet">
+        <li>joining communities of practice </li>
+        <li>attending events and networking </li>
+        <li>reading widely (including blogs and blogging) </li>
+        <li>coaching others and sharing your knowledge</li>
+      </ol>
+      <h3 class="heading-small">Communities of practice</h3>
+      <p>
+        There are active communities of practice for many of the disciplines involved in agile service delivery in government. 
+      </p>
+      <p>
+        GDS has an <a href="http://linkydink.io/groups/gds-agile-delivery-community ">agile delivery community</a> links list that’s updated regularly, which you can subscribe to. It’s also worth having a look to see if there are any relevant collections on the links collection service <a href="http://paper.li/newsstand">paper.li</a> as well as other web collections of links.
+      </p>
+      <h3 class="heading-small">Networking and events</h3>
+      <p>
+        Networking is a useful way of learning. You can also find local meetups and events close to you at <a href="http://www.meetup.com">www.meetup.com</a> or you could start your own.
+      </p>
+      <h3 class="heading-small">Blogs and blogging</h3>
+      <p>
+        There are hundreds of blogs about agile and lean techniques. GDS and teams across government publish blogs that will give you real insight into a particular agile team or challenge. 
+      </p>
+      <h3 class="heading-small">Coaching and sharing your knowledge</h3>
+      <p>
+        Once you’re confident, teaching others is a good way to learn. Try engaging in communities like those on LinkedIn, blogging on your own and others’ blogs about agile or speaking about your experiences internally, at meetups or events.
+      </p>
+
+
+      <h2 class="heading-medium" id="stakeholder-engagement">Stakeholder engagement</h2>
+      <p>
+        Delivery teams need support from people who govern so they can build services that meet user needs.
+      </p>
+      <h3 class="heading-small">Why do stakeholder engagement?</h3>
+      <p>
+        You need to create the right culture within your service development environment to make sure you can build user-centered services using agile and iterative methods. 
+      </p>
+      <p>
+        The agile way of working can be very different for those used to long specifications and procurement processes. It won’t stop you from using existing skills and knowledge, but it will require your team, users and stakeholders to start working together in new ways.
+      </p>
+      <p>
+        To do this you need to engage with the people who govern like digital leaders, portfolio managers, auditors, and teams that will support you like HR, finance and procurement. 
+      </p>
+      <p>
+        Across the life of a service they will be involved in things like:
+      </p>
+      <ol class="list-bullet">
+        <li>managing approvals and funding your digital service</li>
+        <li>supporting delivery and managing assurance</li>
+        <li>supporting your team</li>
+        <li>scaling up the team</li>
+      </ol>    
+      <p>
+        Engaging with your stakeholders will help you create the right conditions to ensure that delivery teams can do the right things for users – in the right way and at the right time. 
+      </p>
+      <h3 class="heading-small">How to do stakeholder engagement</h3>
+      <p>
+        You’ll need to help your stakeholders understand:
+      </p>
+      <ol class="list-bullet">
+        <li>what agile is</li>
+        <li>why agile works</li>
+        <li>agile governance</li>
+        <li>‘bad smells’</li>
+      </ol>
+      <p>
+        You can do this by:
+      </p>
+      <ol class="list-bullet">
+        <li>educating them - presentations, blogs, guidance, videos</li>
+        <li>getting them involved - show and tells, retrospectives, stand-ups, planning, user research</li>
+      </ol>
+      
 
     </div>
   </div>
