--- a/app/views/agile-working/what-is-agile.html
+++ b/app/views/agile-working/what-is-agile.html
@@ -16,86 +16,79 @@
 
 <main id="content" role="main">
 
-  <h1 class="heading-xlarge">Agile working</h1>
-  <nav class="page-navigation">
-    <ol>
-      <li class="active">
-          <span class="part-number">1.</span>
-          <span>What is agile working?</span>
-        </li>
-        <li>
-          <span class="part-number">2.</span>
-          <a href="/agile-working/why-agile-works">Why agile works</a>
-        </li>
-        <li>
-          <span class="part-number">3.</span>
-          <a href="/agile-working/moving-to-agile">Moving to agile</a>
-        </li>
-    </ol>
-    <ol start="4">
-      <li>
-          <span class="part-number">4.</span>
-          <a href="/agile-working/working-agile-team">Working in agile teams</a>
-      </li>
-      <li>
-        <span class="part-number">5.</span>
-        <a href="/agile-working/agile-governance">Agile governance</a>
-      </li>
-    </ol>
-  </nav>
-
   <div class="grid-row">
-    <div class="column-two-thirds">
+  <div class="column-two-thirds">
 
-      <h2 class="heading-large" id="about-the-a-to-z">1. What is agile working?</h2>
+  <h1 class="heading-xlarge">What is agile?</h1>
+      <p class="lede">
+        Agile project management will help you and your team build world-class, user-centred services quickly and affordably.
+      </p>
+  </div>
+
+
+    
+  <div class="column-two-thirds">    
+
+
+
+
+ <!--      <h2 class="heading-large" id="about-the-a-to-z">1. What is agile working?</h2>
       <p>
         Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-      </p>
-      <h3 class="heading-small">Subtitle in here</h3>
+      </p> -->
+
+
+      <h3 class="heading-medium" id="#origin-of-agile">The origin of agile</h3>
       <p>
-        Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
+        Agile project management evolved in software development, but it’s focus on user needs and methods can be successfully applied to other projects. The Government Digital Service (GDS) manages its projects and workstreams using agile and has shown that it produces user-centred services quickly and affordably.
       </p>
-
-      <div class="js-collapsible-collection subsection-collection" data-collapse-depth="1">
-        <div class="collapsible-subsections">
-          <div class="govspeak">
-
-            <h2 class="heading-medium">Title of sub section 1</h2>
-             <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-
-            <h2 class="heading-medium">Title of sub section 2</h2>
-             <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-
-            <h2 class="heading-medium">Title of sub section 3</h2>
-             <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-
-            <h2 class="heading-medium">Title of sub section 4</h2>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-
-          </div>
-
-        </div>
-      </div>
+      <h3 class="heading-medium" id="#digital-by-default">Digital by default service standard and assessment</h3>
+      <p>
+        All digital projects in government must use agile methods to comply with the service standard and pass service assessments. Agile methods can be tailored depending on the operational needs and constraints of different organisations.
+      </p>
+      <h3 class="heading-medium" id="#agile-principles">Agile principles</h3>
+      <p>
+        An agile project is about creating fast iterations of products and services based on the feedback of real users.
+      </p>
+      <p>
+        It means:
+      </p>
+      <ol class="list-bullet">
+        <li>constant communication between team members</li>
+        <li>regularly releasing small pieces of functionality</li>
+        <li>displaying the progress being made by your team (eg with project management software, walls and whiteboards)</li>
+      </ol>
+      <h3 class="heading-small">Your users</h3>
+      <p>
+        User understanding is the most important factor when creating a service. You need a team that has the skills to understand what users need and can make sure those needs are met. 
+      </p>
+      <h3 class="heading-small">Your team</h3>
+      <p>
+        An agile team is multidisciplinary and will include the skills of a user researcher, developer, data analyst, content designer, designer and delivery manager. They must have the skills, organisational support and tools to do their jobs and be trusted to manage their own work.
+      </p>
+      <h3 class="heading-medium" id="#main-features-agile">Main features of agile</h3>
+      <p>
+        Agile projects are broken down into phases:
+      </p>
+      <ol class="list-bullet">
+        <li>discovery</li>
+        <li>alpha</li>
+        <li>beta</li>
+        <li>live</li>
+      </ol>
+      <p>
+        Product development during each phase is broken down into different stages, called sprints.
+      </p>
+      <p>
+        In a sprint, team members aim to achieve goals within set timeframes. A sprint at GDS generally lasts a week and runs from Wednesday to Tuesday, however other agile development teams may run longer or shorter sprints.
+      </p>
+      <p>
+        There are a range of tools and meetings to help the team achieve the goals set in a sprint, but the 2 essential meetings are:
+      </p>
+      <ol class="list-bullet">
+        <li>the stand up, a short daily team meeting</li>
+        <li>the retrospective, a meeting at the end of 1 or 2 sprints to reflect on what did and didn’t go well</li>
+      </ol>
 
     </div>
   </div>
