--- a/app/views/agile-working/why-agile-works.html
+++ b/app/views/agile-working/why-agile-works.html
@@ -9,93 +9,139 @@
 <div id="global-breadcrumb" class="breadcrumb">
   <ol role="breadcrumbs" class="group">
     <li><a href="/">Home</a></li>
-    <li><a href="/">Agile working</a></li>
+    <li><a href="/agile-home">Agile working</a></li>
     <li><strong><a href="/">Why agile works</a></strong></li>
   </ol>
 </div>
 
 <main id="content" role="main">
 
-  <h1 class="heading-xlarge">Agile working</h1>
-  <nav class="page-navigation">
-    <ol>
-      <li class="active">
-          <span class="part-number">1.</span>
-          <a href="/agile-working/what-is-agile">What is agile working?</a>
-        </li>
-        <li>
-          <span class="part-number">2.</span>
-          <span>Why agile works</span>
-        </li>
-        <li>
-          <span class="part-number">3.</span>
-          <a href="/agile-working/moving-to-agile">Moving to agile</a>
-        </li>
-    </ol>
-    <ol start="4">
-      <li>
-          <span class="part-number">4.</span>
-          <a href="/agile-working/working-agile-team">Working in agile teams</a>
-      </li>
-      <li>
-        <span class="part-number">5.</span>
-        <a href="/agile-working/agile-governance">Agile Governance</a>
-      </li>
-    </ol>
-  </nav>
-
   <div class="grid-row">
     <div class="column-two-thirds">
 
-      <h2 class="heading-large" id="about-the-a-to-z">2. Why agile works</h2>
+    <h1 class="heading-xlarge">Why agile works</h1>
+        <p class="lede">
+          Agile methodologies will help you and your team to build world-class, user-centred services quickly and affordably.
+        </p>
+    </div>
+
+    <div class="column-two-thirds">
+
+<!--       <h3 class="heading-small">Why agile works</h3>
       <p>
-        Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-      </p>
-      <h3 class="heading-small">Subtitle in here</h3>
-      <p>
-        Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-      </p>
+        Agile methodologies will help you and your team to build world-class, user-centred services quickly and affordably.
+      </p> -->
+      <ol class="list-number">
+        <li><a href="#minimises-risk">It minimises risk</a></li>
+        <li><a href="#resolve-problems-early">You can resolve problems early</a></li>
+        <li><a href="#cost-effective">It’s cost effective</a></li>
+        <li><a href="#easier-to-change">It’s easier to change things</a></li>
+        <li><a href="#can-experiment">You can experiment</a></li>
+        <li><a href="#plan-efficently">Planning is more efficient</a></li>
+        <li><a href="#more-productive">You’ll more productive</a></li>
+        <li><a href="#better-for-users">It’s better for users</a></li>
+      </ol>
+      
+      <h3 class="heading-medium" id="minimises-risk">1. It minimises risk</h3>
+        <p>Building a digital service is a complex task, with many risks. By breaking development into phases you minimise risk, learning about what works and what doesn't, iterating as you go.
+        </p>
 
-      <div class="js-collapsible-collection subsection-collection" data-collapse-depth="1">
-        <div class="collapsible-subsections">
-          <div class="govspeak">
+        <p>By making regular releases of the service you’re building you reduce the risk of creating a ‘too-big-to-fail’ service that shouldn’t be released, but must be released anyway. 
+        </p>
 
-            <h2 class="heading-medium">Title of sub section 1</h2>
-             <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
+      <h3 class="heading-medium" id="resolve-problems-early">2. You can resolve problems early</h3>
+        <p>
+          Agile techniques don’t guarantee success – you can still fail!
+        </p>
+        <p>
+          But these techniques do allow you to spot problems earlier on and resolve them. You resolve issues, and stop issues from happening:
+        </p>
+      <ol class="list-bullet">
+        <li>if the product is wrong you can easily change direction and iterate</li>
+        <li>if your teams’ speed is still inconsistent after the initial 4 to 6 sprints, then something needs fixing (possibly unknown complications or poor estimation with timings)</li>
+        <li>if you highlight issues with quality early on you establish the issues, baseline the metrics, and monitor them throughout the project</li>
+        <p>
+          You don’t have to be afraid to fail or experiment. Learn to fail, and create a culture that learns from failure.
+        </p>
+      </ol>
+      <h3 class="heading-medium" id="cost-effective">3. It’s cost effective</h3>
 
-            <h2 class="heading-medium">Title of sub section 2</h2>
-             <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
+        <p>
+          By working in phases you only build what you need to and you’ll only have the team members you need for each phase.
+        </p>
 
-            <h2 class="heading-medium">Title of sub section 3</h2>
-             <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
+        <p>
+          At the end of the discovery phase you’ll make a decision whether to proceed to the alpha phase based on your research and data.
+        </p>
 
-            <h2 class="heading-medium">Title of sub section 4</h2>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
-            <p>
-              Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna.
-            </p>
+        <p>
+          If you decide there is a need for the service regularly releasing little pieces of the service will reduce cost to market.
+        </p>
 
-          </div>
+      <h3 class="heading-medium" id="easier-to-change">4. It’s easier to change things</h3>
+        <p>You shorten feedback loops that could be longer if using a waterfall methodology (where you only move on to the next phase when the phase you’re working on is complete). Producing regular iterations makes it easier for you to:</p>
+      <ol class="list-bullet">
+        <li>add improvements</li>
+        <li>fix bugs</li>
+        <li>test expectations about your end product</li>
+      </ol>
 
-        </div>
-      </div>
+      <h3 class="heading-medium" id="can-experiment">5. You can experiment</h3>
+
+        <p>
+          You’ll be able to design and build a number of prototypes to test with end users, and throw them away. This gives the team freedom to explore a range of different concepts and gain a better understanding of what works best for end users. 
+        </p>
+
+      <h3 class="heading-medium" id="plan-efficently">6. Planning is more efficient</h3>
+
+        <p>
+          It’s a myth that you don’t plan on agile projects. The freedom of agile projects does not come free: you have to plan. You just plan differently and continuously.
+        </p>
+
+        <p>
+          Base your agile planning on solid, historical data, not theories or opinions. Your plan must continuously demonstrate its accuracy: nobody on your agile project should take it for granted that the plan is workable.
+        </p>
+
+        <p>
+          Working in phases allows the team making and operating the service to start small, learn fast, and provide value to users as soon as possible.
+        </p>
+
+        <p>
+          Working in sprints and doing regular user research lets the team think about what features are the next most important to produce and direct their efforts on creating usable features.
+        </p>
+
+        <p>
+          A good team means you’re able to estimate your output, or speed, very effectively and consistently. You can then plan much more accurately. 
+        </p>
+
+
+      <h3 class="heading-medium" id="more-productive">7. You’ll be more productive</h3>
+
+        <p>
+          Small agile teams of between 5 to 10 people are often more productive and predictable than larger teams. Forget man-days (the amount of work produced by an average worker in a day) and think about your team as a unit.
+        </p>
+        <p>
+          A good team includes members with all of the skills necessary to successfully build a service.
+        </p>
+        <p>
+          Working together is beneficial. 2 people working on 1 thing will:
+        </p>
+      <ol class="list-bullet">        
+        <li>produce better software solutions</li>
+        <li>encourage better quality controls</li>
+        <li>spread knowledge across the team</li>
+      </ol>
+
+      <h3 class="heading-medium" id="better-for-users">8. It’s better for your users</h3>
+
+        <p>
+          Doing user research continuously will:
+        </p>
+      <ol class="list-bullet">
+        <li>keep your team concentrating on real user needs</li>
+        <li>help teams design products which are prioritised by user needs</li>
+        <li>help teams iterate products in response to user feedback</li>
+      </ol>
 
 
     </div>
